<resources>
    <string name="app_name">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_title">This in my first App</string>
    <string name="main_activity_name">Inserire il nome</string>
    <string name="main_activity_submit">VAI!</string>
    <string name="main_activity_btn_1_1">1.1</string>
    <string name="main_activity_btn_1_2">1.2</string>
    <string name="main_activity_btn_2_1">2.1</string>
    <string name="main_activity_btn_2_2">2.2</string>
    <string name="main_activity_btn_3_1">3.1</string>
    <string name="main_activity_btn_3_2">3.2</string>

    <string name="title_activity_display_message_button">Dettaglio</string>
    <string name="title_activity_display_photo_dialog">Visualizza Foto</string>
</resources>
