<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="it.eng.helloworld.MainActivity"
    android:orientation="vertical">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="it.eng.helloworld.MainActivity"
        android:orientation="horizontal"
        android:id="@+id/linea0">


        <EditText
            android:id="@+id/main_activity_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/main_activity_name" />
        <!-- android:inputType="textEmailAddress" /> -->

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/main_activity_submit"
            android:onClick="sendMessage"/>
        <!-- android:onClick="selfDestruct" /> -->
     </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="it.eng.helloworld.MainActivity"
        android:orientation="horizontal"
        android:id="@+id/linea1"
        android:layout_below="@id/linea0"
        android:gravity="center">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/main_activity_btn_1_1"
            android:onClick="sendMessage"/>
        <!-- android:onClick="selfDestruct" /> -->

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/main_activity_btn_1_2"
            android:onClick="sendMessage"/>
        <!-- android:onClick="selfDestruct" /> -->

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="it.eng.helloworld.MainActivity"
        android:orientation="horizontal"
        android:id="@+id/linea2"
        android:layout_below="@id/linea1"
        android:gravity="center">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/main_activity_btn_2_1"
            android:onClick="sendMessage"/>
        <!-- android:onClick="selfDestruct" /> -->

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/main_activity_btn_2_2"
            android:onClick="sendMessage"/>
        <!-- android:onClick="selfDestruct" /> -->

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="it.eng.helloworld.MainActivity"
        android:orientation="horizontal"
        android:id="@+id/linea3"
        android:layout_below="@id/linea2"
        android:gravity="center">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/main_activity_btn_3_1"
            android:onClick="sendMessage"/>
        <!-- android:onClick="selfDestruct" /> -->

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/main_activity_btn_3_2"
            android:onClick="sendMessage"/>
        <!-- android:onClick="selfDestruct" /> -->

    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="it.eng.helloworld.MainActivity"
        android:orientation="horizontal"
        android:id="@+id/linea4"
        android:layout_below="@id/linea3"
        android:gravity="center">

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:onClick="takePhoto"/>




    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="it.eng.helloworld.MainActivity"
        android:orientation="horizontal"
        android:id="@+id/linea5"
        android:layout_below="@id/linea4"
        android:gravity="center">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/photo_viewer"/>

    </RelativeLayout>


</RelativeLayout>
</ScrollView>








